logs/dag_id=Weather_DAG/run_id=scheduled__2024-02-08T132100+0000/task_id=create_db_schem/attempt=1.log
[2024-02-08T13:23:06.811+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Weather_DAG.create_db_schem scheduled__2024-02-08T13:21:00+00:00 [queued]>
[2024-02-08T13:23:06.824+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Weather_DAG.create_db_schem scheduled__2024-02-08T13:21:00+00:00 [queued]>
[2024-02-08T13:23:06.825+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 2
[2024-02-08T13:23:06.844+0000] {taskinstance.py:2191} INFO - Executing <Task(PostgresOperator): create_db_schem> on 2024-02-08 13:21:00+00:00
[2024-02-08T13:23:06.850+0000] {standard_task_runner.py:60} INFO - Started process 4269 to run task
[2024-02-08T13:23:06.854+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'Weather_DAG', 'create_db_schem', 'scheduled__2024-02-08T13:21:00+00:00', '--job-id', '525', '--raw', '--subdir', 'DAGS_FOLDER/Weather_dag.py', '--cfg-path', '/tmp/tmp2mtd_hq0']
[2024-02-08T13:23:06.855+0000] {standard_task_runner.py:88} INFO - Job 525: Subtask create_db_schem
[2024-02-08T13:23:06.913+0000] {task_command.py:423} INFO - Running <TaskInstance: Weather_DAG.create_db_schem scheduled__2024-02-08T13:21:00+00:00 [running]> on host 06573eafe810
[2024-02-08T13:23:07.010+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='Weather_DAG' AIRFLOW_CTX_TASK_ID='create_db_schem' AIRFLOW_CTX_EXECUTION_DATE='2024-02-08T13:21:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-02-08T13:21:00+00:00'
[2024-02-08T13:23:07.011+0000] {sql.py:276} INFO - Executing: 
        CREATE TABLE IF NOT EXISTS dag_runs(
            id serial PRIMARY KEY,
            city varchar(),
            dt date,
            houur smallint(),
            temperature_c float(),
            pressure_mm float(),
            is_rainy boolean
            )
[2024-02-08T13:23:07.021+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-02-08T13:23:07.030+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-02-08T13:23:07.042+0000] {sql.py:450} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS dag_runs(
            id serial PRIMARY KEY,
            city varchar(),
            dt date,
            houur smallint(),
            temperature_c float(),
            pressure_mm float(),
            is_rainy boolean
            ), parameters: None
[2024-02-08T13:23:07.047+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 398, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 455, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 4:             city varchar(),
                                 ^

[2024-02-08T13:23:07.060+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=Weather_DAG, task_id=create_db_schem, execution_date=20240208T132100, start_date=20240208T132306, end_date=20240208T132307
[2024-02-08T13:23:07.077+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 525 for task create_db_schem (syntax error at or near ")"
LINE 4:             city varchar(),
                                 ^
; 4269)
[2024-02-08T13:23:07.114+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-02-08T13:23:07.132+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
